<resources>
    <string name="app_name">First android app</string>
    <string name="my_info">Name : Pranil Takawane\nCollege : JSPM Wagholi\nCourse : MCA\nCGPA : 8.5</string>
    <string name="title">Information</string>
    <string name="Calculator">Calculator</string>
    <string name="enter_numbers">Enter numbers</string>
    <string name="num1">num1</string>
    <string name="enter_num1">Enter num1</string>
    <string name="enter_num2">Enter num2</string>
    <string name="Addition">Addition\n</string>
    <string name="Subtraction">Subtraction</string>
    <string name="Multiplication">Multi(*)</string>
</resources>