<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="90pt"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="50pt"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/my_info"
            android:textColor="@color/material_on_surface_emphasis_high_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"

            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="48dp"
android:layout_marginHorizontal="19dp"
            android:layout_marginBottom="444dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Calculator"
            android:textColor="@color/black"
            android:background="@color/white"/>

        <FrameLayout
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:background="@color/white">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- EditText for num1 -->
                <EditText
                    android:id="@+id/num1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_num1"
                    android:inputType="number" />

                <!-- Spacer between EditTexts -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <!-- EditText for num2 -->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_num2"
                    android:id="@+id/num2"
                    android:inputType="number" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="80dp"
            android:background="@color/white">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:rowCount="2">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Addition"

                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Subtraction"

                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Multiplication"

                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Addition"

                        />
                </GridLayout>
                <!-- EditText for num1 -->
                <!--                <EditText-->
                <!--                   -->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:hint="@string/enter_num1"-->
                <!--                    android:inputType="number" />-->

                <!--                &lt;!&ndash; Spacer between EditTexts &ndash;&gt;-->
                <!--                <View-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="8dp" />-->

                <!--                &lt;!&ndash; EditText for num2 &ndash;&gt;-->
                <!--                <EditText-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:hint="@string/enter_num2"-->
                <!--                    -->
                <!--                    android:inputType="number" />-->

            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

</RelativeLayout>